--- a/app/src/main/res/layout/activity_sample.xml
+++ b/app/src/main/res/layout/activity_sample.xml
@@ -4,6 +4,11 @@
 			  android:orientation="vertical"
 			  android:gravity="center_horizontal">
 
+	<TextView
+		android:id="@+id/text"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content" />
+
 	<Button
 		android:id="@+id/button"
 		android:layout_width="wrap_content"
